# opengenie

./: .gitignore  MODAL_RUN.md  README.md  pyproject.toml
benchmarks/: __init__.py  diffusers_ltx23_benchmark.py  fastvideo_ltx23_benchmark.py  fastvideo_source_ltx23_benchmark.py  fp8_linear_phase_bench.py  official_ltx23_benchmark.py  profile_diffusers_ltx23.py  video_preattention_bench.py  video_self_attention_bench.py
ltx_serve/: __init__.py  buckets.py  latent_continuity.py  mock_video.py  remote_diffusers_worker.py  remote_official_worker.py  schemas.py  server.py  triton_ltx_ops.py
modal_apps/: ltx23_h100_bench.py  ltx23_h100_preflight.py  ltx23_live_h100_worker.py  ltx23_official_warm_experiments.py  modal_cpu_smoke.py
scripts/: annotate_prompt_injections.py  eval_live_continuity.py  ltx23_attention_lower_bound.py  prepare_init_image.py  run_hot_live_rollout.py  run_live_continuity_session.py
tests/: test_buckets.py  test_latent_continuity.py  test_remote_official_worker.py  test_residual_cache.py  test_server_contract.py  test_spd.py  test_triton_ltx_ops.py
