[project]
name = "opengenie"
version = "0.1.0"
description = "Chunked LTX-2.3 audio-video world continuation experiments."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "modal>=1.2.0",
  "pydantic>=2.8.0",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]
prime-h100-cu13 = [
  "accelerate==1.0.1",
  "apache-tvm-ffi==0.1.11",
  "backports.strenum==1.3.1",
  "cuda-core==1.0.1",
  "cuda-python==13.3.1",
  "diffusers==0.38.0",
  "fastvideo==0.1.7",
  "fastvideo-kernel==0.2.2",
  "flash-attn-4==4.0.0b15",
  "ninja==1.13.0",
  "nvidia-cutlass-dsl==4.5.2",
  "nvidia-cutlass-dsl-libs-base==4.5.2",
  "quack-kernels==0.5.0",
  "safetensors==0.8.0rc0",
  "torch==2.12.0",
  "torch-c-dlpack-ext==0.1.5",
  "transformers==4.57.3",
  "triton==3.7.0",
]

[project.scripts]
ltx23-serve = "ltx_serve.server:main"
ltx23-worker-diffusers = "ltx_serve.remote_diffusers_worker:main"
ltx23-bench-fastvideo = "benchmarks.fastvideo_ltx23_benchmark:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
